# RECTor

./: .gitignore  CITATION.cff  README.md  Step1-Data-processing.py  Step2-Deeper-processing.py  Step3-train-FNE.py  Step4-Eval.py  Step5_new_idea.py  pyproject.toml
configs/: default.yaml
data/: README.md
src/rector/: __init__.py  cli.py  data.py  matching.py  models.py
tests/: test_data.py  test_matching.py
