[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rector-tor"
version = "0.1.0"
description = "RECTor: robust and efficient traffic correlation for Tor"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Binghui Wu"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
rector = "rector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

